# flider

./: Flatpak.vala  detail_window.ui  flatpak.vapi  flider  main.vala  meson.build  reamde.md
.flatpak-builder/cache/refs/heads/x86_64-org.albanix.flider.yaml/: build-flider  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-org.albanix.flider.yaml
model/: FlatpakApp.vala
service/: FlatpakService.vala
src/: UI.vala  fmp.gresource.xml  main.vala  utils.vala
src/application/: app_main.vala
src/flatpak/: flatpak.vala
src/ui/: detail_window.blp  detail_window.ui  detail_window.vala  main_box.vala  window.vala
view/: AppListView.vala  AppRow.vala  MainWindow.vala
